# numsense

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/numsense/: __init__.py  segment_display_reader.py  typeface.py
src/numsense/typefaces/: __init__.py
